# birdkeeper

./: .gitignore  README.md  birdkeeper.py  pyproject.toml  setup.py
birdkeeper/: __init__.py  birdkeeper.py
