[tool.poetry]
name = "birdkeeper"
version = "0.1.0"
description = "Manage hdd luks encryption."
authors = ["jack-auth"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
